--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@ body {
   margin: auto;
   overflow: hidden;
 }
+.btn {
+  height: 30px;
+  background: #e8491d;
+  border-radius: 5px;
+  padding: 0 20px 0 20px;
+  outline: none;
+  color: #ffffff;
+}
+
 /*Navbar*/
 .navbar {
   background: #35424a;
@@ -75,4 +84,42 @@ body {
 }
 .showcase p {
   font-size: 20px;
+}
+/*Newsletter*/
+.newsletter {
+  padding: 15px;
+  color: #ffffff;
+  background: #35424a;
+}
+.newsletter h1 {
+  float: left;
+}
+.newsletter form {
+  float: right;
+  padding-top: 5px;
+  border: 0px;
+}
+
+.newsletter input[type="email"] {
+  padding: 4px;
+  height: 20 px;
+  width: 250px;
+  outline: none;
+}
+/*boxes*/
+.boxes {
+  margin-top: 20px;
+}
+.boxes .box {
+  float: left;
+  text-align: center;
+  width: 30%;
+  padding: 10px;
+}
+.boxes .box img {
+  width: 90px;
+  height: 90px;
+}
+.footer a {
+  text-align: center;
 }
